# DiligentCore

./: .gitmodules  CMakeLists.txt  README.md  ReleaseHistory.md
BuildTools/CMake/: BuildUtils.cmake
BuildTools/FormatValidation/: validate_format_linux_implementation.sh
Common/: CMakeLists.txt
Common/include/: pch.h
Common/interface/: AdvancedMath.hpp  Align.hpp  Array2DTools.hpp  AsyncInitializer.hpp  BasicFileStream.hpp  BasicMath.hpp  DataBlobImpl.hpp  DynamicLinearAllocator.hpp  EngineMemory.h  FileWrapper.hpp  FilteringTools.hpp  FixedBlockMemoryAllocator.hpp  FixedLinearAllocator.hpp  GeometryPrimitives.h  HashUtils.hpp  ImageTools.h  MemoryFileStream.hpp  ObjectBase.hpp  ObjectsRegistry.hpp  ParsingTools.hpp  ProxyDataBlob.hpp  RefCountedObjectImpl.hpp  STDAllocator.hpp  Serializer.hpp  StringDataBlobImpl.hpp  StringPool.hpp  StringTools.h  ThreadPool.h  ThreadPool.hpp  UniqueIdentifier.hpp
Common/src/: Array2DTools.cpp  DataBlobImpl.cpp  FileWrapper.cpp  FixedBlockMemoryAllocator.cpp  GeometryPrimitives.cpp  ImageTools.cpp  Serializer.cpp  ThreadPool.cpp
Graphics/GraphicsEngine/: CMakeLists.txt
Graphics/GraphicsEngine.NET/: Mapping.xml
Graphics/GraphicsEngineD3D12/: readme.md
Graphics/GraphicsEngineOpenGL/: readme.md
Graphics/ShaderTools/: CMakeLists.txt
Primitives/: CMakeLists.txt
Primitives/interface/: CommonDefinitions.h  DataBlob.h  DebugOutput.h  DefineInterfaceHelperMacros.h  Errors.hpp  FileStream.h  FlagEnum.h  FormatString.hpp  InterfaceID.h  MemoryAllocator.h  Object.h  Primitives.h  ReferenceCounters.h
Primitives/src/: test.cpp
(+783 files in other folders)
